2005-07-10  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-capplet.[ch]:
	(gnome_wp_icon_theme_changed):
	(wallpaper_properties_init):
	Update to use GtkIconTheme rather than GnomeIconTheme
	Based on patch from Jan de Groot

	Fixes #171677

2005-07-10  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-info.c (gnome_wp_info_new): Fix some memory leaks by using
	a separate variable to store the escaped path, and md5sum

	* gnome-wp-item.c (gnome_wp_item_get_thumbnail): Fix a couple of
	memory leaks by using a separate variable to store the escaped path
	Don't unref the pixbuf from the thumbnail generation, and then try
	to load it again after saving

2005-06-14  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-info.c (gnome_wp_info_new): Revert undocumented, unapproved
	change from Sebastian Bacher committed on 2005-05-22
	
2005-02-26  Rodney Dawes  <dobey@novell.com>

	* *.[ch]: Update Copyright to include current year

2005-02-26  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-capplet.c (gnome_wp_add_image): If the filename is not
	encoded in UTF-8, we just ignore it for now to avoid crashing

	* gnome-wp-xml.c (gnome_wp_xml_load_xml): Check to make sure that the
	filename and name tags that we read in, aren't NULL
	If the filename we read in is NULL, free the item, and continue on

	Fixes #146130 #146645 (resolving these as dups of #168604 )
	Fixes #159441

2005-02-06  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-capplet.c (wallpaper_properties_init): Force using the gtk+
	backend for the file chooser since we don't support vfs yet

	Fixes #154978

2005-02-06  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-capplet.c (gnome_wp_color_changed): Change the API to use
	the boolean argument to specify if we want to update gconf or not
	Always get the colors for both primary and secondary and update the
	thumbnail
	Only set the keys in gconf if we have the update boolean argument
	(gnome_wp_pcolor_changed): Removed this method, since we don't need