@@ -1,3 +1,10 @@
+2005-07-13  Rodney Dawes  <dobey@novell.com>
+
+	* gnome-wp-info.c (gnome_wp_info_new): Pass the md5sum to the call
+	to g_strconcat to create the path to the thumbnail file
+
+	Fixes #310293
+
 2005-07-10  Rodney Dawes  <dobey@novell.com>
 
 	* gnome-wp-capplet.[ch]:
